--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,46 @@
 services:
-  php:
-    image: php:8.4-fpm
-    volumes:
-      - ./:/var/www/app
-    working_dir: /var/www/app
+  nginx:
+    image: nginx:stable-alpine
     ports:
-      - "8000:8000"
+      - "8021:80"
+    volumes:
+      - ./:/var/www/
+      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
+    command: ["nginx", "-g", "daemon off;"]
+    depends_on:
+      - php
+      - database
+    networks:
+      - bebeton_backend
+  php:
+    build:
+        context: .
+        dockerfile: ./docker/backend.Dockerfile
+    ports:
+        - "9000:9000"
+    volumes:
+        - ./:/var/www/
+    networks:
+      - bebeton_backend
+  database:
+    image: postgres:${POSTGRES_VERSION:-16}-alpine
     environment:
-      - PHP_FPM_LISTEN_ADDRESS=127.0.0.1:8000
+      POSTGRES_DB: ${POSTGRES_DB:-app}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-root}
+      POSTGRES_USER: ${POSTGRES_USER:-root}
+    healthcheck:
+      test: ["CMD", "pg_isready", "-d", "${POSTGRES_DB:-app}", "-U", "${POSTGRES_USER:-root}"]
+      timeout: 5s
+      retries: 5
+      start_period: 60s
+    ports:
+        - "5432:5432"
+    volumes:
+      - database_data:/var/lib/postgresql/data:rw
+    networks:
+      - bebeton_backend
+volumes:
+  database_data:
+
+networks:
+    bebeton_backend:
